--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".AppointmentActivity"/>
+        <activity android:name=".AppointmentPagerActivity"/>
 
     </application>
 
