feat: Added a way to add events to schedule

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".AppointmentPagerActivity"/>
+        <activity android:name=".AppointmentPagerActivity"
+            android:parentActivityName=".AppointmentListActivity"/>
 
     </application>
 
